maze.island.IslandMaze.scala.code
override def run() {
  while (!estNord) {
		if (estFaceMur) {
      keepHandOnSideWall
    } else {
    	avance()
    }
  }
  while (!estSurBiscuit) {
    keepHandOnSideWall
  }
  prendBiscuit()
  setPosition = Direction.EAST
}


def estNord(): Boolean = {
  if (getY==0) {
    return true
  } else {
    return false
  }
}

def keepHandOnSideWall() {
	if (estFaceMur) {
    gauche()
  }
  if (estFaceMur) {
    gauche()
  }
  if (estFaceMur) {
    gauche()
  }
  avance()
  droite()
}